# routerify

./: Cargo.toml  README.md
examples/: aws_lambda.rs  error_handling.rs  error_handling_with_custom_errors.rs  error_handling_with_request_info.rs  handle_404_pages.rs  middleware.rs  request_duration.rs  route_parameters.rs  scoped_router.rs  share_data_and_state.rs  simple_example.rs  test-with-heavy-loads.rs  test.rs  test2.rs
src/: lib.rs
src/ext/: request.rs
src/middleware/: mod.rs  post.rs  pre.rs
src/route/: mod.rs
src/router/: builder.rs  mod.rs
src/service/: mod.rs  request_service.rs  router_service.rs
src/types/: mod.rs  request_info.rs
tests/: integration.rs
tests/support/: mod.rs
