[package]
name = "routerify"
version = "3.0.0"
description = "A lightweight, idiomatic, composable and modular router implementation with middleware support for the Rust HTTP library hyper.rs."
homepage = "https://github.com/routerify/routerify"
repository = "https://github.com/routerify/routerify"
keywords = ["hyper", "hyper-rs", "router", "routing", "middleware"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = ["hyper-http1"]
all = ["hyper-http1", "hyper-http2"]
hyper-http1 = ["hyper/http1"]
hyper-http2 = ["hyper/http2"]

[dependencies]
bytes = "1"
hyper = { version = "1", default-features = false, features = ["server"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
regex = { version = "1", default-features = false, features = ["std"] }
lazy_static = "1"
percent-encoding = "2"
futures-util = { version = "0.3" }
sync_wrapper = "0.1.2"
pin-project-lite = "0.2.13"

[dev-dependencies]
hyper-util = { version = "0.1", features = [
    "tokio",
    "client",
    "client-legacy",
    "server",
    "server-auto",
] }
tokio-util = "0.7.10"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

